Work around for apparent buggy behaviour of LinkedBlockingQueue which manifests on some machines